<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Monu-Mental Math</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="mental_math">Mental Math</string>
    <string name="title_activity_mental_math">Mental Math</string>
    <string name="zero_seconds_zero_milliseconds">00:00</string>
    <string name="a_line">--------------------</string>
    <string name="make_negative">Make Negative</string>
    <string name="c">C</string>
    <string name="clear">Clear</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_eight">8</string>
    <string name="number_seven">7</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="operator_addition">+</string>
    <string name="done">Done!</string>
    <string name="nothing"></string>
    <string name="score_zero">Score: 0</string>
    <string name="zero_seconds">:00</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_fleeting_figures">Fleeting Figures</string>
    <string name="fleeting_figures">Fleeting Figures</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="title_activity_game_over">Game Over</string>
    <string name="game_over">Game Over!</string>
    <string name="game_">Game:</string>
    <string name="title_activity_score_screen">Score Screen</string>
    <string name="player_scores">Player Scores</string>
    <string name="exit">Exit</string>
    <string name="scores">Scores</string>
    <string name="check_scores">Check Scores</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="next">Next</string>
    <string name="main_menu">Main Menu</string>
    <string name="instructions">Instructions</string>
    <string name="monu_mental_math_title">Monu-Mental Math!</string>

</resources>