<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".FleetingFigures" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:text="@string/zero_seconds"
                android:textColor="@color/black"
                android:textSize="@dimen/font_15" />

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/nothing"
                android:textColor="@color/black"
                android:textSize="@dimen/font_20" />

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:text="@string/number_zero"
                android:textColor="@color/black"
                android:textSize="@dimen/font_15" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_2"
                android:focusable="false"
                android:paddingBottom="@dimen/dimen_20dp"
                android:paddingTop="@dimen/dimen_20dp"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:text="@string/nothing"
                android:textColor="@color/white"
                android:textSize="@dimen/font_40" />

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_2"
                android:focusable="false"
                android:paddingBottom="@dimen/dimen_20dp"
                android:paddingTop="@dimen/dimen_20dp"
                android:text="@string/nothing"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:textColor="@color/white"
                android:textSize="@dimen/font_40" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_2"
                android:focusable="false"
                android:paddingBottom="@dimen/dimen_20dp"
                android:paddingTop="@dimen/dimen_20dp"
                android:text="@string/nothing"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:textColor="@color/white"
                android:textSize="@dimen/font_40" />

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_background_2"
                android:focusable="false"
                android:paddingBottom="@dimen/dimen_20dp"
                android:paddingTop="@dimen/dimen_20dp"
                android:text="@string/nothing"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="5"
                android:textColor="@color/white"
                android:textSize="@dimen/font_40" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/nothing"
                android:textColor="@color/black"
                android:textSize="@dimen/font_15" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/questionNumberTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"
                android:text="@string/nothing"
                android:textColor="@color/black"
                android:textSize="@dimen/font_40" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/answerButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/red_answer_button"
                android:text="@string/red"
                android:textSize="@dimen/font_20"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"  />

            <Button
                android:id="@+id/answerButton2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/blue_answer_button"
                android:text="@string/blue"
                android:textSize="@dimen/font_20"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"  />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/answerButton3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/yellow_answer_button"
                android:text="@string/yellow"
                android:textSize="@dimen/font_20"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1"  />

            <Button
                android:id="@+id/answerButton4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/green_answer_button"
                android:text="@string/green"
                android:textSize="@dimen/font_20"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="1" />

        </TableRow>

    </TableLayout>

</LinearLayout>